# cgame

./: .gitignore  Makefile.am  configure.ac  configure~
assets/: bone.skel.temp  bones.skel  bones2.skel
assets/models/: bone.boj  spaceship.mtl
assets/shaders/: debug.fs  debug.vs  draw.fs  draw.vs  grid.fs  grid.vs  sprite-depth.fs  sprite.fs  sprite.vs
src/: Makefile.am  alloc.c  main.c
src/adt/: Makefile.am  common.h  custom_types.h  fast.c  fast.h  fastheap.h  fastmap.h  fastqu.h  fastree.h  fastset.h  fastvec.h  murmur.c  murmur.h  str.h  triangulate.c  triangulate.h
src/box2d/: Makefile.am  aabb.c  aabb.h  allocate.h  arena_allocator.c  array.c  array.h  bitset.c  bitset.h  block_allocator.c  body.c  body.h  box2d.h  broad_phase.c  broad_phase.h  callbacks.h  color.h  constants.h  contact.c  contact_solver.c  contact_solver.h  core.c  core.h  debug_draw.h  distance.c  distance.h  distance_joint.c  dynamic_tree.c  dynamic_tree.h  geometry.c  geometry.h  graph.c  hull.c  hull.h  id.h  island.c  joint.c  joint.h  joint_types.h  joint_util.h  (+18 more)
src/engine/: Makefile.am  atlas.c  atlas.h  bone.c  bone.h  camera.c  camera.h  debug.c  debug.h  draw.c  draw.h  editor.c  editor.h  file.c  file.h  game.c  game.h  glad.c  grid.c  grid.h  input.c  input.h  level.c  level.h  material.h  mathf.h  mesh.c  mesh.h  noise.h  shader.c  shader.h  sprite.c  sprite.h  sprite_base.h  string.h
src/geometry/: Makefile.am  triangulate.c  triangulate.h
src/gui/: Makefile.am  cimgui.cpp  cimgui_impl.h  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  libgui.cpp  libgui.h
src/levels/: Makefile.am  box2d_debug_draw.h  box2d_sample.c  box2d_sample.h  graph1.c  graph1.h  sample2d.c  sample2d.h  skeleton_test.c  skeleton_test.h  temp.c  temp.h
src/math/: Makefile.am  aabb.h  bbox.h  caps2.h  color.c  color.h  defs.h  edge.c  edge.h  ivec2.h  mat2.h  mat3.c  mat3.h  mat4.c  mat4.h  mat4_ifc.h  noise.c  noise.h  plane.h  quad.c  quad.h  quat.c  quat.h  rand.c  rand.h  ray.c  ray.h  rect.h  rot.c  rot.h  rot2.h  rot_ifc.h  scalar.c  scalar.h  sphere.h  tetrahedron.c  tetrahedron.h  tran2.h  triangle.c  triangle.h  (+7 more)
src/mem/: Makefile.am  alloc.c  alloc.h  arena.c  arena.h  defs.h  mem.h  pool.c  pool.h  stack.c  stack.h  std.c  std.h  utils.h
src/skel/: Makefile.am  anim.c  anim.h  anim_editor.c  anim_editor.h  bone.c  bone.h  bone_prv.c  bone_prv.h  constr.h  constr_prv.c  constr_prv.h  render.c  skel.c  skel.h  skel_prv.h  skelfile.c  solver.c  types.h
