noinst_LTLIBRARIES = libengine.la

libengine_la_SOURCES = \
    sprite.c \
    atlas.c \
    level.c glad.c \
    camera.c \
    debug.c \
    draw.c \
    editor.c \
    file.c \
    stb_image.c \
    game.c \
    grid.c \
    input.c \
    shader.c

AM_CPPFLAGS = -I$(top_srcdir)/src
AM_CFLAGS = -Wall -Wextra -static